should use collect on toList